--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,9 +16,9 @@ elasticsearch_ip: 192.168.1.45:10200,192.168.1.50:10200,192.168.1.230:10200
 spring:
   datasource: #database
     master:
-      jdbc-url: jdbc:mysql://192.168.1.50:3306/ados_live_db?characterEncoding=UTF-8&useUnicode=true&useSSL=false
+      jdbc-url: jdbc:mysql://192.168.1.46:3306/ados_live_db?characterEncoding=UTF-8&useUnicode=true&useSSL=false
       username: dev
-      password: dev@vmDB123
+      password: ceshi@123
       driver-class-name: com.mysql.jdbc.Driver
     slave:
       jdbc-url: jdbc:mysql://192.168.1.46:3306/ad-plat?characterEncoding=UTF-8&useUnicode=true&useSSL=false
